Replaced some 1.5-only Integer method calls.
git-svn-id: https://citdcbmipav.cit.nih.gov/repos-pub/mipav@1641 ba61647d-9d00-f842-95cd-605cb4296b96